// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <Logo
    gutterBottom={true}
  />
  <withContext(createMutationContainer(PostCommentFormContainer))
    assetID="asset-id"
  />
  <div
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <div
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
        gutterBottom={true}
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </div>
    <div
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
        gutterBottom={true}
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`when there is more disables load more button 1`] = `
<div>
  <Logo
    gutterBottom={true}
  />
  <withContext(createMutationContainer(PostCommentFormContainer))
    assetID="asset-id"
  />
  <div
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <div
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
        gutterBottom={true}
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </div>
    <div
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
        gutterBottom={true}
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </div>
    <Localized
      id="comments-stream-loadMore"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-stream-log"
        disabled={true}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        invert={true}
        onClick={[Function]}
        secondary={true}
      >
        Load More
      </withPropsOnChange(Button)>
    </Localized>
  </div>
</div>
`;

exports[`when there is more renders a load more button 1`] = `
<div>
  <Logo
    gutterBottom={true}
  />
  <withContext(createMutationContainer(PostCommentFormContainer))
    assetID="asset-id"
  />
  <div
    aria-live="polite"
    id="talk-comments-stream-log"
    role="log"
  >
    <div
      key="comment-1"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-1",
          }
        }
        gutterBottom={true}
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
      />
    </div>
    <div
      key="comment-2"
    >
      <Relay(CommentContainer)
        data={
          Object {
            "id": "comment-2",
          }
        }
        gutterBottom={true}
      />
      <Relay(ReplyListContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
      />
    </div>
    <Localized
      id="comments-stream-loadMore"
    >
      <withPropsOnChange(Button)
        aria-controls="talk-comments-stream-log"
        disabled={false}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        invert={true}
        onClick={[Function]}
        secondary={true}
      >
        Load More
      </withPropsOnChange(Button)>
    </Localized>
  </div>
</div>
`;
